0902-Chocolate_custom_screen2

--- a/Customization.html
+++ b/Customization.html
@@ -14,7 +14,113 @@
 </head>
 
 <body>
-
+    <div id="Operation_tips">
+        <div id="Operation_tips_box1">
+            <div id="Operation_tips_box1_div">
+                <div id="Operation_tips_box1_first_row">
+                    <p>操作方式</p>
+                    <img src="./images/Custom_block/left_sidebar/close.svg" alt="" class="Close_prompt">
+                </div>
+                <div id="Operation_tips_box1_first_row2">
+                    <p>提供多樣立體造型巧克力</p>
+                    <p>拖移來裝飾巧克力</p>
+                </div>
+                <div id="Operation_tips_box1_first_row3">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips1.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img1">
+                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img2">
+                </div>
+                <div id="Operation_tips_box1_first_row4">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips1_1.svg" alt="">
+                </div>
+            </div>
+            <div id="Operation_tips_box2_div">
+                <div id="Operation_tips_box1_first_row">
+                    <p>操作方式</p>
+                    <img src="./images/Custom_block/left_sidebar/close.svg" alt="" class="Close_prompt">
+                </div>
+                <div id="Operation_tips_box1_first_row2">
+                    <p>選擇不同的口味，搭配不同的餡料</p>
+                    <!-- <p>拖移來裝飾巧克力</p> -->
+                </div>
+                <div id="Operation_tips_box1_first_row3_2">
+                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                        id="Operation_tips_box2_first_row3_img3">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips2.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img1">
+                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img2_1">
+                </div>
+                <div id="Operation_tips_box1_first_row4">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips2_1.svg" alt="">
+                </div>
+            </div>
+            <div id="Operation_tips_box3_div">
+                <div id="Operation_tips_box1_first_row">
+                    <p>操作方式</p>
+                    <img src="./images/Custom_block/left_sidebar/close.svg" alt="" class="Close_prompt">
+                </div>
+                <div id="Operation_tips_box1_first_row2">
+                    <p>也提供不同的模板可選擇</p>
+                    <!-- <p>拖移來裝飾巧克力</p> -->
+                </div>
+                <div id="Operation_tips_box1_first_row3_2">
+                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                        id="Operation_tips_box3_first_row3_img3">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips3.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img1">
+                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                        id="Operation_tips_box3_first_row3_img2_1">
+                </div>
+                <div id="Operation_tips_box1_first_row4">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips3_1.svg" alt="">
+                </div>
+            </div>
+            <div id="Operation_tips_box4_div">
+                <div id="Operation_tips_box1_first_row">
+                    <p>操作方式</p>
+                    <img src="./images/Custom_block/left_sidebar/close.svg" alt="" class="Close_prompt">
+                </div>
+                <div id="Operation_tips_box1_first_row2">
+                    <p>選擇禮盒的樣式或顏色</p>
+                    <p>在卡片寫下想給她的祝福</p>
+                </div>
+                <div id="Operation_tips_box1_first_row3_2">
+                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                        id="Operation_tips_box4_first_row3_img3">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips4.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img1">
+                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                        id="Operation_tips_box4_first_row3_img2_1">
+                </div>
+                <div id="Operation_tips_box1_first_row4">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips4_1.svg" alt="">
+                </div>
+            </div>
+            <div id="Operation_tips_box5_div">
+                <div id="Operation_tips_box1_first_row">
+                    <p>操作方式</p>
+                    <img src="./images/Custom_block/left_sidebar/close.svg" alt="" class="Close_prompt">
+                </div>
+                <div id="Operation_tips_box1_first_row2-1">
+                    <p>開始設計獨一無二的巧克力禮盒</p>
+                    <!-- <p>在卡片寫下想給她的祝福</p> -->
+                </div>
+                <div id="Operation_tips_box1_first_row5_2">
+                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img3_1">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips5.svg" alt=""
+                        id="Operation_tips_box5_first_row3_img2">
+                    <!-- <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                        id="Operation_tips_box1_first_row3_img2-1"> -->
+                </div>
+                <div id="Operation_tips_box1_first_row4">
+                    <img src="./images/Custom_block/left_sidebar/Operation_tips5_1.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="menu"></div>
     <script type="text/babel">
         function App() {
@@ -69,9 +175,10 @@
                 </li>
             </ul>
         </div> -->
+        <!-- </div> -->
 
 
-        </div>
+
         <div id="all">
             <div id="left_sidebar">
                 <ul id="left_sidebar_ul">
