--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -431,41 +431,44 @@
                             </div>
                         </div>
                     </div>
-                    <div id="full_list_box_right_order_box4">
-                        <div>
-                            <img src="./images/shopping_cart_two/hr.svg" alt="" id="full_list_box_right_order_box4_img">
-                        </div>
-                    </div>
-                    <div id="full_list_box_right_order_box5">
-                        <div id="full_list_box_right_order_box5_div">
-                            <div id="full_list_box_right_order_box5_div_total">
-                                <p>商品合計:</p>
-                                <p id="full_list_box_right_order_box5_div_cash">5,000</p>
-                                <p>元</p>
-                            </div>
-                            <div id="full_list_box_right_order_box5_div_freight">
-                                <p>運費:</p>
-                                <p id="full_list_box_right_order_box5_div_freightcash">200</p>
-                                <p>元</p>
+                    <div id="checkout_block">
+                        <div id="full_list_box_right_order_box4">
+                            <div>
+                                <img src="./images/shopping_cart_two/hr.svg" alt=""
+                                    id="full_list_box_right_order_box4_img">
                             </div>
                         </div>
-                    </div>
-                    <div id="full_list_box_right_order_box5">
-                        <div>
-                            <img src="./images/shopping_cart_two/hr.svg" alt="">
+                        <div id="full_list_box_right_order_box5">
+                            <div id="full_list_box_right_order_box5_div">
+                                <div id="full_list_box_right_order_box5_div_total">
+                                    <p>商品合計:</p>
+                                    <p id="full_list_box_right_order_box5_div_cash">5,000</p>
+                                    <p>元</p>
+                                </div>
+                                <div id="full_list_box_right_order_box5_div_freight">
+                                    <p>運費:</p>
+                                    <p id="full_list_box_right_order_box5_div_freightcash">200</p>
+                                    <p>元</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div id="full_list_box_right_order_box6">
-                        <div id="full_list_box_right_order_box6_total">
-                            <p>總計:</p>
-                            <p id="full_list_box_right_order_box6_total_cash">NT 5,200</p>
-                            <p>元</p>
+                        <div id="full_list_box_right_order_box5">
+                            <div>
+                                <img src="./images/shopping_cart_two/hr.svg" alt="">
+                            </div>
                         </div>
+                        <div id="full_list_box_right_order_box6">
+                            <div id="full_list_box_right_order_box6_total">
+                                <p>總計:</p>
+                                <p id="full_list_box_right_order_box6_total_cash">NT 5,200</p>
+                                <p>元</p>
+                            </div>
 
-                    </div>
-                    <div id="full_list_box_bottom">
-                        <div>
-                            <img src="./images/shopping_cart_two/Checkout.svg" alt="">
+                        </div>
+                        <div id="full_list_box_bottom">
+                            <div>
+                                <img src="./images/shopping_cart_two/Checkout.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
