--- a/QnA.html
+++ b/QnA.html
@@ -32,7 +32,9 @@
 <body>
     <header></header>
     <main>
+        <div class="title_wrap"><img src="./images/Q&A_images/title.svg" alt=""></div>
         <section className="QnA">
+            
             <div className="file">
 
 
