--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
             .createRoot(document.getElementById('menu'))
             .render(<App />);
     </script>
+    <div class="title_wrap"><img src="./images/about_images/title.svg" alt=""></div>
     <div class="sec_about">
-        <div class="title"><img src="./images/about_images/title.svg" alt=""></div>
         <div class="content"><img src="./images/about_images/about.svg" alt=""></div>
     </div>
     <div class="sec_traffic">
