--- a/shop.html
+++ b/shop.html
@@ -303,10 +303,10 @@
                             break;
                         case 'permutation':
                             setShowPermutationDropdown(show);
-                            if (show) {
+                            /* if (show) {
                                 // 在顯示 permutation 下拉選單時，進行排序
                                 sortItems(selectedPermutation);
-                            }
+                            } */
                             break;
                         default:
                             break;
