--- a/News & shopingcar &Login/News.html
+++ b/News & shopingcar &Login/News.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 
-<head>
+<head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News 最新消息</title>
     <link rel="stylesheet" href="../css/news-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <link  
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
-    <link
+        rel="stylesheet">  
+    <link  
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif+TC:wght@200..900&display=swap"
-        rel="stylesheet">
-    <link
+        rel="stylesheet">  
+    <link  
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Matemasie&family=New+Amsterdam&display=swap"
-        rel="stylesheet">
-</head>
+        rel="stylesheet">  
+</head>  
 
-<body>
+<body>  
 
 
 
     <main class="main">
         <header class="title">
-            <img src="../imgs/Rectangle.png" alt="" class="rectangle">
+            <img src="../imge/Rectangle.png" alt="" class="rectangle">
             <h1>NEWS</h1>
             <h3>最新消息</h3>
         </header>
@@ -33,7 +33,7 @@
             <section class="news_box">
                 <section class="news">
                     <div class="news_img">
-                        <img src="../imgs/門市開幕.png" alt="">
+                        <img src="../imge/門市開幕.png" alt="">
                         <div class="opening">
                             <h2>門市開幕</h2>
                             <p>2024.9.20</p>
@@ -46,28 +46,28 @@
                 <aside class="box__list">
                     <a href="#">
                         <div class="content">
-                            <img src="../imgs/新品上市.png" alt="">
+                            <img src="../imge/新品上市.png" alt="">
                             <p class="date">2024.11.20</p>
                             <p class="font">新品上市</h3>
                                 <!-- <p>巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，
                     還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.</p> -->
-                        </div>
-                    </a>
+                        </div>      
+                    </a>      
 
                     <a href="#">
                         <div class="content">
-                            <img src="../imgs/聖誕節.png" alt="">
+                            <img src="../imge/聖誕節.png" alt="">
                             <p class="date">2024.12.20</p>
                             <p class="font">耶誕限定商品來囉</h3>
 
                                 <!-- <p>巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，
                     還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.</p> -->
-                        </div>
-                    </a>
+                        </div>      
+                    </a>      
 
                     <a href="#">
                         <div class="content">
-                            <img src="../imgs/新年.png" alt="">
+                            <img src="../imge/新年.png" alt="">
                             <p class="date">2025.1.1</p>
                             <p class="font">新年優惠活動</h3>
 
