0904Chocolate_custom_screen2

--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -241,7 +241,7 @@
                     <li id="Prompt_field_img4"><img
                             src="./images/Custom_block/Customized_cards/left_sidebar/Frame 16.svg" alt="">
                     </li>
-                    <li id="Prompt_field_img5"><a href="#"><img src="./images/Custom_block/Prompt_field/Group 5.svg"
+                    <li id="Prompt_field_img5"><a href="./shopping_cart.html"><img src="./images/Custom_block/Prompt_field/Group 5.svg"
                                 alt=""></a></li>
                 </ul>
             </div>
