--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,7 @@
             function Item(props) {
                 return (
                     <div className="item_wrap">
-                        <a className="item" href="#">
+                        <a className="item" href="./Product_details_page.html">
                             <div className="item_pic"> <img src={props.pic} /></div>
                             <div className="item_name">{props.name}</div>
                             <div className="item_price">NT {props.price}</div>
