0904Chocolate_custom_screen3

--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -117,7 +117,9 @@
                         <img src="./images/Product-details-page/first_block/Frame 7.svg" alt="">
                     </div>
                     <div id="product_details_page_tab_div1_give_gifts">
-                        <img src="./images/Product-details-page/first_block/Frame 8.svg" alt="">
+                        <a href="./shopping_cart.html">
+                            <img src="./images/Product-details-page/first_block/Frame 8.svg" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
