--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -68,7 +68,7 @@
                         <img src="./images/shopping_cart/hr.svg" alt="">
                     </div>
                 </div>
-              
+
                 <div id="box1_box2">
                     <div id="product_display">
                         <div id="product_tips">
@@ -104,7 +104,7 @@
                         <img src="./images/shopping_cart/hr.svg" alt="">
                     </div>
                 </div>
-               
+
             </div>
 
             <div id="Checkout_area">
@@ -142,11 +142,11 @@
                 </div>
                 <div id="Checkout_area_btn_box">
                     <div id="Checkout_area_box">
-                        <a href="#" id="Checkout_area_box_a1"><img src="./images/shopping_cart/Continue_shopping.svg"
-                                alt=""></a>
-                        <a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img src="./images/shopping_cart/Checkout.svg" alt=""></a>
+                        <a href="./shop.html" id="Checkout_area_box_a1"><img
+                                src="./images/shopping_cart/Continue_shopping.svg" alt=""></a>
+                        <a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
+                                src="./images/shopping_cart/Checkout.svg" alt=""></a>
                     </div>
-                    pi
                 </div>
             </div>
     </main>
