0904Chocolate_custom_screen4

--- a/Customization.html
+++ b/Customization.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <div id="menu"></div>
+    <!-- <div id="menu"></div>
     <script type="text/babel">
         function App() {
             React.useEffect(() => {
@@ -134,9 +134,9 @@
         ReactDOM
             .createRoot(document.getElementById('menu'))
             .render(<App />);
-    </script>
+    </script> -->
     <main id="main">
-        <!-- <div id="menu">
+        <div id="menu">
             <ul id="menu_id">
                 <div id="menu_id_menu">
                     <li id="menu_id_li"><a href="./index.html">HOME</a></li>
@@ -174,8 +174,8 @@
                             src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
                 </li>
             </ul>
-        </div> -->
-        <!-- </div> -->
+        </div>
+
 
 
 
@@ -647,7 +647,7 @@
         </div>
 
     </main>
-    
+
     <!-- <script src="./js/jq.js"></script> -->
     <script src="./js/Customization.js"></script>
     <script src="./js/Drag_function.js"></script>
