--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="menu"></div>
+    <!-- <div id="menu"></div>
     <script type="text/babel">
         function App() {
             React.useEffect(() => {
@@ -27,23 +27,50 @@
         ReactDOM
             .createRoot(document.getElementById('menu'))
             .render(<App />);
-    </script>
+    </script> -->
+    <!-- <main id="main"> -->
     <main id="main">
-    <main id="main">
-        <!-- <div id="menu">
+        <div id="menu">
             <ul id="menu_id">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SHOP</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">NEWS</a></li>
-                <li><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized">customized</a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
-                            alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
+                <div id="menu_id_menu">
+                    <li id="menu_id_li"><a href="./index.html">HOME</a></li>
+                    <li id="menu_id_li"><a href="#">SHOP</a></li>
+                    <li id="menu_id_li"><a href="#">ABOUT</a></li>
+                    <li id="menu_id_li"><a href="#">NEWS</a></li>
+                    <li id="menu_id_li"><a href="#">Q&A</a></li>
+                    <li id="menu_id_menu_icon"><a href="#" id="customized">
+                            <p>customized</p>
+                        </a></li>
+                </div>
+                <div id="menu_id_icon">
+                    <li><a href="#" id="menu_id_icon_search"><img
+                                src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
+                    </li>
+                    <li id="menu_id_icon_show"><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    </li>
+                    <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                                alt=""></a></li>
+                </div>
             </ul>
-        </div> -->
+            <ul id="menu_id_search">
+                <li>
+                    <div id="menu_id_search_divBox">
+                        <a href="#" id="menu_id_search_divBox_a1"><img src="./images/Custom_block/menu/search.svg"
+                                alt="">
+                            <p>搜尋</p>
+                        </a>
+                        <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
+                                alt=""></a>
+                    </div>
+                <li><a href="#" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                </li>
+                <li><a href="#" id="menu_id_search_li3"><img
+                            src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                </li>
+            </ul>
+        </div>
+
+
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
